--- a/cadastro1/package.json
+++ b/cadastro1/package.json
@@ -19,7 +19,9 @@
     "electron": "^17.1.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "dotenv": "^16.0.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "pg": "^8.7.3"
   },
   "config": {
     "forge": {
