--- a/cadastro1/docker/docker-compose.yml
+++ b/cadastro1/docker/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.2'
 
 services:
-  database:
+  postgres:
     image: postgres:alpine
     container_name: postgres-db
     restart: unless-stopped
 
     networks:
-      rede-falconsl:
+      rede-psql:
         ipv4_address: 10.0.0.10
     ports:
       - 5433:5432
@@ -18,12 +18,28 @@ services:
     links:
       - pgadmin
 
+  postgres-setup:
+    image: postgres:alpine
+    container_name: postres-setup
+    restart: "no"
+    depends_on:
+      - postgres
+    networks:
+      rede-psql:
+    volumes:
+      - ./:/app
+    entrypoint:
+      [
+        "bash -c",
+        "sleep 5 && psql postgresql://postgres:postgres@10.0.0.10 < /app/createDB.sql"
+      ]
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: postgres-pgadmin
     restart: unless-stopped
     networks:
-      rede-falconsl:
+      rede-psql:
         ipv4_address: 10.0.0.11
     ports:
       - 8080:80
@@ -32,7 +48,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: postgres
 
 networks:
-  rede-falconsl:
+  rede-psql:
     driver: bridge
     driver_opts:
       com.docker.network.enable_ipv6: "false"
