--- a/aplicacoes/tododolutz/package.json
+++ b/aplicacoes/tododolutz/package.json
@@ -8,7 +8,7 @@
     "start": "yarn run build && electron-forge start dist/",
     "build": "tsc",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src"
+    "lint": "eslint -c .eslintrc --ext .ts ./app/server"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
@@ -16,6 +16,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
+    "@types/electron": "^1.6.10",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -24,6 +25,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
