--- a/aplicacoes/tododolutz/tsconfig.json
+++ b/aplicacoes/tododolutz/tsconfig.json
@@ -1,15 +1,23 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "target": "ES5",
+    "lib": [
+      "DOM"
+    ],
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"]
-    }
+    "baseUrl": "./app",
+    // "paths": {
+    //   "*": [
+    //     "node_modules/*"
+    //   ]
+    // }
   },
   "include": [
-    "src/**/*"
+    "app/src/**/*",
   ]
 }
