new: Postgres connection + Conn template - @aplicacoes/js-todo

--- a/aplicacoes/js-todo/package.json
+++ b/aplicacoes/js-todo/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "electron-squirrel-startup": "^1.0.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "pg": "^8.7.3"
   },
   "config": {
     "forge": {
