--- a/aplicacoes/js-todo/package.json
+++ b/aplicacoes/js-todo/package.json
@@ -5,13 +5,12 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
+    "start": "yarn up; electron-forge start",
     "make": "electron-forge make",
-    "clean": "rm -rf *.log && rm -rf out/*",
+    "test": "jest",
     "up": "docker compose -f docker/docker-compose.yml up -d",
-    "down": "docker compose -f docker/docker-compose.yml down",
-    "test": "jest"
+    "down": "docker compose -f docker/docker-compose.yml down --volumes",
+    "logs": "docker compose -f docker/docker-compose.yml logs -f"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
