--- a/aplicacoes/js-todo/src/server/package.json
+++ b/aplicacoes/js-todo/src/server/package.json
@@ -1,15 +1,24 @@
 {
-    "name": "@server/todo",
-    "description": "Todo App backend API",
+    "name": "server",
     "version": "1.0.0",
-    "main": "main.js",
+    "license": "MIT",
+    "main": "src/index.ts",
+    "devDependencies": {
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^17.0.23",
+        "jest": "^27.5.1",
+        "typescript": "^4.6.3"
+    },
     "scripts": {
-        "dev": "node main.js",
+        "start": "ts-node src/index.ts",
         "test": "jest"
     },
     "dependencies": {
         "dotenv": "^16.0.0",
-        "jest": "^27.5.1",
-        "pg": "^8.7.3"
+        "express": "^4.17.3",
+        "pg": "^8.7.3",
+        "ts-node": "^10.7.0"
     }
 }
