--- a/aplicacoes/js-todo/Makefile
+++ b/aplicacoes/js-todo/Makefile
@@ -2,14 +2,14 @@
 install:
 	pnpm install; \
 	for file in $$(ls ./src); do \
-        echo "./src/$$file" && pnpm install ./src/$$file; \
+        echo "./src/$$file" && cd ./src/$$file && pnpm i && cd ../..; \
     done
 #
 
 .PHONY: start
 start:
 	# yarn up \
-	cd src/client && yarn start;	cd src/server && yarn start; cd src/app && yarn start;
+	cd src/client && yarn start; cd ../.. &&	cd src/server && yarn start; cd ../.. && cd src/app && yarn start;
 
 .PHONY: database
 database:
