--- a/aplicacoes/js-todo/src/app/package.json
+++ b/aplicacoes/js-todo/src/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@app/todo",
+    "name": "@todo/app",
     "description": "Todo Electron App",
     "version": "1.0.0",
     "main": "main.js",
