--- a/aplicacoes/js-todo/src/client/package.json
+++ b/aplicacoes/js-todo/src/client/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@client/todo",
-  "private": true,
+  "name": "@todo/client",
   "version": "0.0.0",
   "scripts": {
     "start": "vite",
