--- a/aplicacoes/js-todo/src/server/package.json
+++ b/aplicacoes/js-todo/src/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "server",
+    "name": "@todo/server",
     "version": "1.0.0",
     "license": "MIT",
     "main": "src/index.ts",
@@ -8,6 +8,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.23",
+        "@types/pg": "^8.6.5",
         "jest": "^27.5.1",
         "typescript": "^4.6.3"
     },
