--- a/aplicacoes/js-todo/Makefile
+++ b/aplicacoes/js-todo/Makefile
@@ -1,15 +1,23 @@
 .PHONY: install
 install:
 	pnpm install; \
-	for file in $$(ls ./src); do \
-        echo "./src/$$file" && cd ./src/$$file && pnpm i && cd ../..; \
+	for file in $$(ls ./app); do \
+        echo "./app/$$file" && cd ./app/$$file && pnpm i && cd ../..; \
     done
 #
 
 .PHONY: start
-start:
+start: 
+	docker-compose --profile all up -d
+
+.PHONY: build
+build: 
+	docker-compose --profile all up --build
+
+.PHONY: local
+local:
 	# yarn up \
-	cd src/client && yarn start; cd ../.. &&	cd src/server && yarn start; cd ../.. && cd src/app && yarn start;
+	cd app/client && yarn start; cd ../.. &&	cd app/server && yarn start; cd ../.. && cd app/desktop && yarn start;
 
 .PHONY: database
 database:
