--- a/aplicacoes/js-todo/app/client/package.json
+++ b/aplicacoes/js-todo/app/client/package.json
@@ -2,7 +2,7 @@
   "name": "@todo/client",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
