--- a/aplicacoes/js-todo/app/server/package.json
+++ b/aplicacoes/js-todo/app/server/package.json
@@ -4,16 +4,17 @@
     "license": "MIT",
     "main": "src/index.ts",
     "devDependencies": {
-        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.23",
         "@types/pg": "^8.6.5",
         "jest": "^27.5.1",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.3"
     },
     "scripts": {
         "start": "ts-node src/index.ts",
+        "dev": "ts-node-dev src/index.ts",
         "test": "jest"
     },
     "dependencies": {
