--- a/aplicacoes/js-todo/app/server/package.json
+++ b/aplicacoes/js-todo/app/server/package.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "main": "src/index.ts",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.23",
@@ -18,6 +19,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "pg": "^8.7.3",
