--- a/aplicacoes/js-todo/docker-compose.yml
+++ b/aplicacoes/js-todo/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: app/server/
       target: development
     container_name: server
-    networks:
-      rede-psql:
-        ipv4_address: 10.0.0.11
+    # networks:
+    #   rede-psql:
+    #     ipv4_address: 10.0.0.10
     env_file:
       - ./app/server/.env
     depends_on:
@@ -20,14 +20,38 @@ services:
     command: [ "npm", "run", "start" ]
     profiles: [ "all" ]
   ##
+  client:
+    build:
+      context: app/client
+      target: development
+    container_name: client
+    # networks:
+    #   rede-psql:
+    #     ipv4_address: 10.0.0.10
+    env_file:
+      - .env
+    depends_on:
+      - server
+    ports:
+      - 3333:3333
+    volumes:
+      - /app/client/node_modules
+      - ./app/client/:/usr/app/client/
+    command: [ "npm", "run", "start" ]
+    profiles: [ "all" ]
+    environment:
+      CHOKIDAR_USEPOLLING: "true" # seems like this enables hot reloading https://stackoverflow.com/questions/44643045/running-development-server-with-create-react-app-inside-of-a-docker-container
+    links:
+      - server
+  ##
   db:
     image: postgres:alpine
     container_name: db
     restart: unless-stopped
     user: postgres
-    networks:
-      rede-psql:
-        ipv4_address: 10.0.0.20
+    # networks:
+    #   rede-psql:
+    #     ipv4_address: 10.0.0.20
     ports:
       - 5433:5432
     volumes:
@@ -41,9 +65,9 @@ services:
   postgres-setup:
     image: postgres:alpine
     container_name: postres-setup
-    networks:
-      rede-psql:
-        ipv4_address: 10.0.0.30
+    # networks:
+    #   rede-psql:
+    #     ipv4_address: 10.0.0.30
     depends_on:
       - db
     volumes:
@@ -60,51 +84,26 @@ services:
     image: dpage/pgadmin4
     container_name: postgres-pgadmin
     restart: unless-stopped
-    networks:
-      rede-psql:
-        ipv4_address: 10.0.0.21
+    # networks:
+    #   rede-psql:
+    #     ipv4_address: 10.0.0.21
     ports:
       - 5444:5444
     environment:
       PGADMIN_DEFAULT_EMAIL: postgres@email.com
       PGADMIN_DEFAULT_PASSWORD: postgres
     profiles: [ "database", "all" ]
-
   ##
-  client:
-    build:
-      context: app/client
-      target: development
-    container_name: client
-    networks:
-      rede-psql:
-        ipv4_address: 10.0.0.10
-    env_file:
-      - .env
-    depends_on:
-      - server
-    ports:
-      - 3333:3333
-    volumes:
-      - /app/client/node_modules
-      - ./app/client/:/usr/app/client/
-    command: [ "npm", "run", "start" ]
-    profiles: [ "all" ]
-    environment:
-      CHOKIDAR_USEPOLLING: "true" # seems like this enables hot reloading https://stackoverflow.com/questions/44643045/running-development-server-with-create-react-app-inside-of-a-docker-container
-    links:
-      - server
-##
 
-networks:
-  rede-psql:
-    driver: bridge
-    driver_opts:
-      com.docker.network.enable_ipv6: "false"
-    ipam:
-      driver: default
-      config:
-        - subnet: 10.0.0.1/24
+  # networks:
+  #   rede-psql:
+  #     driver: bridge
+  #     driver_opts:
+  #       com.docker.network.enable_ipv6: "false"
+  #     ipam:
+  #       driver: default
+  #       config:
+  #         - subnet: 10.0.0.1/24
 
 volumes:
   postgres:
