--- a/aplicacoes/js-todo/app/server/.env
+++ b/aplicacoes/js-todo/app/server/.env
@@ -1,5 +1,13 @@
-DB_HOST=10.0.0.20
-DB_PORT=5432
+# DB_HOST=10.0.0.20
+# DB_PORT=5432
+DB_HOST=localhost
+DB_PORT=5433
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=tododb
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?schema=public
