--- a/aplicacoes/task-manager/app/server/package.json
+++ b/aplicacoes/task-manager/app/server/package.json
@@ -14,7 +14,8 @@
         "typescript": "^4.6.3"
     },
     "scripts": {
-        "start": "prisma migrate dev -n start && ts-node src/index.ts",
+        "prestart": "yarn prisma migrate dev -n start",
+        "start": "ts-node src/index.ts",
         "dev": "ts-node-dev src/index.ts",
         "test": "jest"
     },
